#2257 Action Image alignment issue

--- a/canvas_modules/common-canvas/src/common-properties/components/control-item/control-item.scss
+++ b/canvas_modules/common-canvas/src/common-properties/components/control-item/control-item.scss
@@ -36,6 +36,11 @@
 	}
 }
 
+.properties-ci-action-item {
+	display: flex;
+	justify-content: space-between;
+}
+
 .properties-label-container {
 	display: flex;
 	align-items: center;
